# worldbuild-arena

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/tests/: test_engine_integration.py  test_llm_integration.py  test_match_endpoints.py
apps/api/worldbuild_api/: main.py  settings.py  types.py  util.py
apps/api/worldbuild_api/contracts/: __init__.py  ids.py  loader.py  validate.py
apps/api/worldbuild_api/engine/: __init__.py  challenge.py  engine.py  events.py  rules.py  validation.py
apps/api/worldbuild_api/matches/: __init__.py  service.py  state.py
apps/api/worldbuild_api/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  mock.py  openai.py
apps/api/worldbuild_api/storage/: __init__.py  sqlite_store.py
apps/api/worldbuild_api/streaming/: __init__.py  hub.py
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/api/: client.ts  sse.ts  types.ts
apps/web/src/components/: ArenaScene.tsx
apps/web/src/hooks/: useMatch.ts  useMatchStream.ts  usePerformance.ts  useReplay.ts  useViewport.ts
apps/web/src/lib/: api.ts  derive.ts
apps/web/src/pages/: GalleryPage.tsx  HomePage.tsx  JudgingPage.tsx  MatchPage.tsx
apps/web/src/state/: canonDerive.ts  matchStore.ts  selectors.ts
apps/web/src/styles/: animations.ts  globals.css  theme.ts
docs/: implementation-plan.md  quickstart.md  spec.md  tech.md
docs/tmp/: 3d-scene-gaps.md  aws-serverless-vision.md
(+19 files in other folders)
