[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "worldbuild-api"
version = "0.0.0"
description = "Worldbuild Arena orchestrator API"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "jsonpatch>=1.33",
  "jsonschema>=4.23.0",
  "pydantic>=2.10.3",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = ["httpx>=0.28.1", "pytest>=8.3.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["worldbuild_api"]
